objects/Tanium_Partner_Discount__c/Tanium_Partner_Discount__c.object-meta.xml
<CustomObject>
    <label>Tanium Partner Discount</label>
    <nameField>
        <displayFormat>TPD-{00000}</displayFormat>
        <label>Tanium Partner Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tanium Partner Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>