objects/Tanium_Partner_Discount__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting this field to TRUE means that it will be used in CPQ price rules</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>