objects/Tanium_Partner_Discount__c/fields/Advantage_Plus_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Advantage_Plus_Partner_Discount__c</fullName>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>