objects/Tanium_Partner_Discount__c/fields/Bypass_Recalc_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Recalc_Batch_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Recalc Batch Job</label>
    <type>Checkbox</type>
</CustomField>