objects/Tanium_Partner_Discount__c/fields/CaseRecordId__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18Id</label>
    <type>Text</type>
</CustomField>