objects/Tanium_Partner_Discount__c/fields/Deal_Reg_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Status__c</fullName>
    <label>DEPRECATED - Deal Reg Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>