objects/Tanium_Partner_Discount__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>On what date will we stop using this discount record?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>