objects/Tanium_Partner_Discount__c/fields/Level_2_Area__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Area__c</fullName>
    <label>Level 2 (Area)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US and Canada</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>North Asia</fullName>
            </value>
            <value>
                <fullName>Global Partners</fullName>
            </value>
            <value>
                <fullName>USPS SLED</fullName>
            </value>
            <value>
                <fullName>USPS Federal</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>