objects/Tanium_Partner_Discount__c/fields/Level_3_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Sub_Area__c</fullName>
    <label>Level 3 (Sub-Area)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>US Federal</fullName>
            </value>
            <value>
                <fullName>US SLED</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EMEA: Central Europe</fullName>
            </value>
            <value>
                <fullName>EMEA: Northern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA: Southern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA: Named Accounts</fullName>
            </value>
            <value>
                <fullName>Global Partner Development</fullName>
            </value>
            <value>
                <fullName>Global Partner Sales</fullName>
            </value>
            <value>
                <fullName>US and Canada</fullName>
            </value>
            <value>
                <fullName>US Emerging Enterprises</fullName>
            </value>
            <value>
                <fullName>US Northeast</fullName>
            </value>
            <value>
                <fullName>US Southeast</fullName>
            </value>
            <value>
                <fullName>US Northwest</fullName>
            </value>
            <value>
                <fullName>US Southwest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>