objects/Tanium_Partner_Discount__c/fields/Opportunity_Registration_Discount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Registration_Discount__c</fullName>
    <label>DEPRECATED - OppReg Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>