objects/Tanium_Partner_Discount__c/fields/Partner_is_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Partner_is_Incumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner is Incumbent</label>
    <type>Checkbox</type>
</CustomField>