objects/Tanium_Partner_Discount__c/fields/Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Level__c</fullName>
    <label>Partner Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global Strategic</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
                <isActive>false</isActive>
                <label>Advantage</label>
            </value>
            <value>
                <fullName>Advantage Plus</fullName>
                <isActive>false</isActive>
                <label>Advantage Plus</label>
            </value>
            <value>
                <fullName>Advantage Strategic</fullName>
                <isActive>false</isActive>
                <label>Advantage Strategic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>