objects/Tanium_Partner_Discount__c/fields/Partner_Match_and_Approved__c.field-meta.xml
<CustomField>
    <fullName>Partner_Match_and_Approved__c</fullName>
    <label>DEPRECATED - Partner Match and Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>