objects/Tanium_Partner_Discount__c/fields/Program_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Program_Bucket__c</fullName>
    <label>Program Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Fulfill</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Teaming</fullName>
            </value>
            <value>
                <fullName>Velocity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>