objects/Tanium_Partner_Discount__c/fields/Quote_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Type__c</fullName>
    <label>Quote Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>POC/Trial</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>