objects/Tanium_Partner_Discount__c/fields/Renewal_Action_Plan_Created__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Action_Plan_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Lookup Query.</description>
    <label>Renewal Action Plan Created</label>
    <type>Checkbox</type>
</CustomField>