objects/Tanium_Partner_Discount__c/fields/Sales_Ops_Derived_EP_Min__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Derived_EP_Min__c</fullName>
    <label>DEPRECATED - Sales Ops Derived EP Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>