objects/Tanium_Partner_Discount__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>On what date will we start using this discount record?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>