objects/Tanium_Partner_Discount__c/fields/Support_Discount__c.field-meta.xml
<CustomField>
    <fullName>Support_Discount__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Support Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>