objects/Tanium_Partner_Discount__c/fields/Support_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Support_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that an additional discount will be applied when the partner is accredited</inlineHelpText>
    <label>Support Eligible</label>
    <type>Checkbox</type>
</CustomField>