objects/Tanium_Partner_Discount__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <formula>IF(Support_Eligible__c, Advantage_Plus_Partner_Discount__c +  Support_Discount__c, Advantage_Plus_Partner_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>