objects/Tanium_Partner_Discount__c/validationRules/Support_Ineligible_Must_be_Zero_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Support_Ineligible_Must_be_Zero_Discount</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     NOT(Support_Eligible__c),
     Support_Discount__c != 0
)</errorConditionFormula>
    <errorDisplayField>Support_Discount__c</errorDisplayField>
    <errorMessage>Since you&apos;ve indicated that this is a support ineligible record, then the Support Discount (%) field must be zero</errorMessage>
</ValidationRule>