objects/Tanium_Partner_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Line_Type__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Product_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Program_Bucket__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>