objects/Tanium_Partner_Discount__c/listViews/All_Incl_Opp_Reg.listView-meta.xml
<ListView>
    <fullName>All_Incl_Opp_Reg</fullName>
    <columns>NAME</columns>
    <columns>Quote_Line_Type__c</columns>
    <columns>Sales_Ops_Derived_EP_Min__c</columns>
    <columns>Sales_Ops_Derived_EP_Max__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Opportunity_Registration_Discount__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Level_2_Area__c</columns>
    <columns>Level_3_Sub_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Incl Opp Reg</label>
</ListView>