objects/Tanium_Partner_Discount__c/listViews/Copy_of_FY25_Partner_Discounts.listView-meta.xml
<ListView>
    <fullName>Copy_of_FY25_Partner_Discounts</fullName>
    <columns>NAME</columns>
    <columns>DEPRECATED_Active__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Program_Bucket__c</columns>
    <columns>Partner_is_Incumbent__c</columns>
    <columns>Renewal_Action_Plan_Created__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Total_Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Quote_Line_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Copy of FY25 Partner Discounts</label>
</ListView>