objects/Tanium_Partner_Discount__c/listViews/FY25_Partner_Discounts.listView-meta.xml
<ListView>
    <fullName>FY25_Partner_Discounts</fullName>
    <columns>NAME</columns>
    <columns>Partner_Level__c</columns>
    <columns>Program_Bucket__c</columns>
    <columns>Partner_is_Incumbent__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Total_Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Quote_Line_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>Support,Non-Software,Third Party Software - ScreenMeet</value>
    </filters>
    <filters>
        <field>Program_Bucket__c</field>
        <operation>equals</operation>
        <value>MSP,Partner Sourced</value>
    </filters>
    <label>FY25 Partner Discounts</label>
</ListView>