objects/Tanium_Partner_Discount__c/listViews/FY26_Partner_Discounts.listView-meta.xml
<ListView>
    <fullName>FY26_Partner_Discounts</fullName>
    <columns>NAME</columns>
    <columns>DEPRECATED_Active__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Program_Bucket__c</columns>
    <columns>Partner_is_Incumbent__c</columns>
    <columns>Renewal_Action_Plan_Created__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Total_Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Quote_Line_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>5/1/2025</value>
    </filters>
    <label>FY26 Partner Discounts</label>
</ListView>