objects/Tanium_Partner_Discount__c/listViews/Marketplace_Discounts.listView-meta.xml
<ListView>
    <fullName>Marketplace_Discounts</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Program_Bucket__c</columns>
    <columns>Partner_is_Incumbent__c</columns>
    <columns>Renewal_Action_Plan_Created__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Total_Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Quote_Line_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Level__c</field>
        <operation>equals</operation>
        <value>Marketplace</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Marketplace Discounts</label>
</ListView>