objects/Tanium_Partner_Discount__c/listViews/MSP.listView-meta.xml
<ListView>
    <fullName>MSP</fullName>
    <columns>NAME</columns>
    <columns>DEPRECATED_Active__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Program_Bucket__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Support_Eligible__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Support_Discount__c</columns>
    <columns>Total_Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Bucket__c</field>
        <operation>equals</operation>
        <value>MSP</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MSP</label>
</ListView>