objects/Tanium_Partner_Discount__c/listViews/Support_Eligible.listView-meta.xml
<ListView>
    <fullName>Support_Eligible</fullName>
    <columns>NAME</columns>
    <columns>DEPRECATED_Active__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Program_Bucket__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Support_Eligible__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Support_Discount__c</columns>
    <columns>Total_Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Support_Discount__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Support_Discount__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Support Eligible</label>
</ListView>