objects/Tanium_Partner_Discount__c/listViews/US_and_Canada.listView-meta.xml
<ListView>
    <fullName>US_and_Canada</fullName>
    <columns>NAME</columns>
    <columns>Quote_Line_Type__c</columns>
    <columns>Sales_Ops_Derived_EP_Min__c</columns>
    <columns>Sales_Ops_Derived_EP_Max__c</columns>
    <columns>Partner_Level__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Opportunity_Registration_Discount__c</columns>
    <columns>Advantage_Plus_Partner_Discount__c</columns>
    <columns>Partner_Match_and_Approved__c</columns>
    <columns>Level_2_Area__c</columns>
    <columns>Level_3_Sub_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level_2_Area__c</field>
        <operation>equals</operation>
        <value>US and Canada</value>
    </filters>
    <label>US and Canada</label>
    <language>en_US</language>
</ListView>